--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "meshline": "^3.3.1",
     "next": "14.2.4",
     "react": "^18",
+    "react-awesome-reveal": "^4.2.12",
     "react-dom": "^18",
+    "react-transition-group": "^4.4.5",
     "three": "^0.165.0"
   },
   "devDependencies": {
